kubernetes/apps/base/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: gitea
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: revenz/gitea
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 4000m
              memory: 2Gi
            limits:
              cpu: "10"
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /media
              name: gitea-media
            - mountPath: /temp
              name: gitea-temp
            - mountPath: /app/Data
              name: gitea-data
            - mountPath: /app/Logs
              name: gitea-logs
            - mountPath: /app/common
              name: gitea-common
      restartPolicy: Always
      volumes:
        - name: gitea-media
          persistentVolumeClaim:
            claimName: media
        - name: gitea-common
          persistentVolumeClaim:
            claimName: gitea-common
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: gitea-logs
          persistentVolumeClaim:
            claimName: gitea-logs
        - name: gitea-temp
          emptyDir:
            sizeLimit: 100Gi
