kubernetes/apps/base/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: media
spec:
  selector:
    app: gitea
  ports:
    - protocol: TCP
      port: 19200
      targetPort: 5000
