kubernetes/apps/base/gitea/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gitea.${cluster_domain}`)
      kind: Rule
      services:
        - name: gitea
          port: 5678
