kubernetes/apps/base/gitea/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gitea.${cluster_domain}`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
